<resources>

    <!-- General Strings -->
    <string name="app_name">Tic Tac Toe</string>
    <string name="title_intro">Welcome to Tic Tac Toe by Bridgefy!</string>
    <string name="text_intro">
        You can play with people that are up to 330 feet (100 meters) from you, without Internet!\n\n
        Just make sure you turn your Bluetooth antenna on. Have fun!
    </string>
    <string name="text_footer">
        Want to make your own app work without Internet?\n\n
        Visit www.bridgefy.me!
    </string>
    <string name="powered_by">Powered by Bridgefy</string>
    <string name="exit_match">Exit match</string>
    <string name="text_username">Username</string>
    <string name="button_start">Play</string>
    <string name="error">An Internet connection is needed just this once. Enable it and try again?</string>


    <!-- Game related strings -->
    <string name="X">"   X   "</string>
    <string name="O">"   O   "</string>
    <string name="none">"          "</string>
    <string name="match_rejected">Sorry, %1$s rejected your invitation to play</string>
    <string name="draw">Game: Draw</string>
    <string name="empty_square">Please choose an empty square</string>
    <string name="wait_turn">Wait for your turn!</string>
    <string name="your_turn">Your turn, %1$s</string>
    <string name="you_win">You win!</string>
    <string name="their_turn">%1$s\'s turn (%2$s)</string>
    <string name="their_win">%1$s wins!</string>
</resources>
