<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bridgefy.samples.tic_tac_toe.IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:baselineAligned="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/turn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="32dp"
            android:text="@string/title_intro"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:layout_below="@+id/mainBoard"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button_new_match" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_weight="1"
            android:text="@string/text_intro" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:layout_weight="0.2"
            android:ems="10"
            android:hint="@string/text_username" />

        <Button
            android:id="@+id/btn_start"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start" />

        <TextView
            android:id="@+id/footer"
            android:linksClickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_weight="1"
            android:text="@string/text_footer" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
